# deepseekv4-mini-pytorch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: __init__.py  text_datasets.py
docs/: README.md
docs/cli/: reference.md
docs/inference/: cache_modes.md  kv_cache.md  overview.md
inference/: README.md  csa_cache.py  decode.py  deepseek_cache_builder.py  hca_cache.py  hybrid_cache.py  inference_config.py  mtp_decode.py  prefill.py
notebooks/: inference.ipynb  training.ipynb
outputs/: inference_monolith.py
scripts/: inference_cli.py  inspect_cli.py
src/: deepseek_block.py  deepseek_csa_attention.py  deepseek_hca_attention.py  mini_deepseek_class.py
src/transformer_modules/: mha_baseline.py
tests/data/: test_text_datasets.py
tests/inference/: test_checkpoint_cpu.py  test_config_sampling.py  test_prefill_decode_generate.py
